# rustbot

./: .env  .profile  Cargo.toml  README.md
src/: examp.rs  main.rs
src/commands/: .misc_commands.rs.kate-swp  misc_commands.rs  mod.rs  ping.rs
src/utils/: argparser.rs
