[package]
name = "rustbot"
version = "0.1.0"
authors = ["loyston500 <loyston500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.3"
serenity = "0.10.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
